finished on the additions of the common app

--- a/allifmaaladminapp/templates/allifmaaladminapp/home/home.html
+++ b/allifmaaladminapp/templates/allifmaaladminapp/home/home.html
@@ -95,7 +95,9 @@
     
           <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonPrograms' user_var glblslug %}">Programs</a></li>
        <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonServices' user_var glblslug %}">Services/Subjects</a></li>
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAssetCategories' user_var glblslug %}">Asset Categories</a></li>
       
+       
     </div>
     </ul>
   </div>
