--- a/allifmaalcommonapp/templates/allifmaalcommonapp/assets/assets.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/assets/assets.html
@@ -36,10 +36,10 @@
       </div>
       </ul>
     </div>
-    <a class="amel-table-list-identifier">Asset Categories:</a>
+    <a class="amel-table-list-identifier">Assets:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
 
-    <a href="{% url 'allifmaalcommonapp:commonAssetCategories' user_var glblslug %}">Asset Categories</a>
+    <a href="{% url 'allifmaalcommonapp:commonCategories' user_var glblslug %}">Categories</a>
     <a href="{% url 'allifmaalcommonapp:commonAssets' user_var glblslug %}">Assets</a>
     <a href="{% url 'allifmaalcommonapp:commonAddAsset' user_var glblslug %}">Add New Asset</a>
 
