--- a/allifmaalcommonapp/templates/allifmaalcommonapp/operations/categories/categories.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/operations/categories/categories.html
@@ -37,7 +37,7 @@
       </div>
       </ul>
     </div>
-    <a class="amel-table-list-identifier">Stock Categories:</a>
+    <a class="amel-table-list-identifier">Categories:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
    <a href="{% url 'allifmaalcommonapp:commonCategories' user_var glblslug %}">Main Categories</a>
     <a href="{% url 'allifmaalcommonapp:commonAddCategory' user_var glblslug %}">New Category</a>
