--- a/allifmaalcommonapp/templates/allifmaalcommonapp/records/progress/progress.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/records/progress/progress.html
@@ -17,6 +17,7 @@
   <div class="container-fluid amel-content-header">
     
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+    <a href="{% url 'allifmaalcommonapp:commonTransactions' user_var glblslug %}">Transactions</a>
     <a href="{% url 'allifmaalcommonapp:commonProgress' allifquery.id user_var glblslug %}">Progress Records</a>
   
    <a href="{% url 'allifmaalcommonapp:commonAddProgress' allifquery.id user_var glblslug %}">Add New Progress</a>
