--- a/allifmaalcommonapp/templates/allifmaalcommonapp/transactions/add_trans_items.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/transactions/add_trans_items.html
@@ -12,13 +12,12 @@
   <div class="row mt-12" ><!--start....header row-->
   <div class="col-md-12"><!--start....header column-->
   <div class="container-fluid amel-content-header">
-    <a class="amel-table-list-identifier">Add Items {{allifquery}}:</a>
+  
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
     
-    <a href="{% url 'allifmaalcommonapp:commonQuotes' user_var glblslug %}">Quotations</a>
-    <a href="{% url 'allifmaalcommonapp:commonInvoices' user_var glblslug %}">Invoices</a>
-    <a href="{% url 'allifmaalcommonapp:commonInvoiceToPdf' allifquery.id user_var glblslug %}">Download</a>
-    
+    <a href="{% url 'allifmaalcommonapp:commonTransactions' user_var glblslug %}">Transactions</a>
+    <a href="{% url 'allifmaalcommonapp:commonTransactionToPdf' allifquery.id user_var glblslug %}">Download</a>
+
   </div>
   
       </div><!--end....header column-->
@@ -29,9 +28,8 @@
 
 <div class="allifmaincontainer">
 
-
-
   <div class="row mt-12"> <!--start....table row-->
+    <div class="table-details-content-description">Items For {{allifquery}}</div>
     <div class="col-md-12"><!--start of the first row body-->
       <div class="allif-form-container">
       
@@ -44,14 +42,10 @@
                
                 <td>Item Description</td>
                 <td>Quantity</td>
-                <td>Discount</td>
-                <td>Part No.</td>
-                <td>In Stock</td>
-                <td>Unit Cost</td>
-                <td>Unit Price</td>
-                <td>Amount</td>
-             
-             
+                <td>Description</td>
+               
+                <td>Comments</td>
+                 <td>Date</td>
               <td>Navigate</td>
               
               <td> . . . </td>
@@ -65,14 +59,10 @@
               <td><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonStockItemDetails' item.items.id user_var glblslug %}">{{item.items}}</a></td>
             
           <td>{{item.quantity|floatformat:2|intcomma}}</td>
-          <td>{{item.discount|floatformat:2|intcomma}}%</td>
-          <td> {{item.description.partNumber}}</td>
+          <td>{{item.description}}</td>
          
-          <td>{{item.description.quantity|floatformat:2|intcomma}}</td>
-          <td>{{item.description.unitcost|floatformat:2|intcomma}}</td>
-          <td>{{item.description.unitPrice|floatformat:2|intcomma}}</td>
-          
-          <td>{{item.invoice_selling_price|floatformat:2|intcomma}}</td>
+          <td>{{item.comments}}</td>
+           <td>{{item.date|date:'d/m/Y'}}</td>
           
          
                <td>
@@ -99,62 +89,6 @@
           </tr>
           {% endfor %}
 
-           <tr>
-                <form method='POST' action=''>{% csrf_token %}
-                 
-                  <td id="allif-table-inline-form">{{form.items}}</td>
-                  <td id="allif-table-inline-form">{{form.quantity}}</td>
-                  <td id="allif-table-inline-form">{{form.unitcost}}</td>
-                   <td id="allif-table-inline-form">{{form.unitprice}}</td>
-                  <td id="allif-table-inline-form"> <input type="submit" value='Add' class="btn btn-success allifmaal-submit-btn"></td>
-                  <td id="allif-table-inline-form">_______________</td>
-                  <td id="allif-table-inline-form">_______________</td>
-                  <td id="allif-table-inline-form">_______________</td>
-                  <td id="allif-table-inline-form" colspan="5">_______________</td>
-                </form>
-                </tr>
-
-          <tr>
-            <td id="allif-table-sums-section" colspan="3"></td>
-            <td id="allif-table-sums-section" colspan="4">Sub Total</td>
-            <td id="allif-table-sums-section" colspan="2">{{allifquery.total|floatformat:2|intcomma}}</td>
-            <td id="allif-table-sums-section" colspan="3"></td>
-            
-          </tr>
-  
-          <tr>
-            <td id="allif-table-sums-section" colspan="3"></td>
-            <td id="allif-table-sums-section" colspan="4">Discount</td>
-            <td id="allif-table-sums-section" colspan="2">{{allifquery.discountAmount|floatformat:2|intcomma}}</td>
-            <td id="allif-table-sums-section" colspan="3"></td>
-            
-            </tr>
-            <tr>
-            <td id="allif-table-sums-section" colspan="3"></td>
-              <td id="allif-table-sums-section" colspan="4">Total</td>
-              <td id="allif-table-sums-section" colspan="2">{{allifquery.totalwithdiscount|floatformat:2|intcomma}}</td>
-              <td id="allif-table-sums-section" colspan="3"></td>
-              
-              </tr>
-  
-            
-            <tr>
-             <td id="allif-table-sums-section" colspan="3"></td>
-              <td id="allif-table-sums-section" colspan="4"> Add Tax {{allifquery.salestax.taxrate}}%</td>
-              <td id="allif-table-sums-section" colspan="2">{{allifquery.taxAmount|floatformat:2|intcomma}}</td>
-              <td id="allif-table-sums-section" colspan="3"></td>
-              
-              </tr>
-          
-                <tr>
-                 <td id="allif-table-sums-section" colspan="3"></td>
-                  <td id="allif-table-sums-section" colspan="4"><strong>Grand Total {{allifquery.currency}}</strong></td>
-                  <td id="allif-table-sums-section" colspan="2"><strong>{{allifquery.grandtotal|floatformat:2|intcomma}}</strong></td>
-                  <td id="allif-table-sums-section" colspan="4"></td>
-                  
-                  </tr>
-          
-         
             </tbody>
           </table>
           </div>
@@ -170,6 +104,97 @@
             
         </div>
             </div><!--end of first row body....-->
+   
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Add Items For {{allifquery}}</div>
+  <form method='POST' action=''>{% csrf_token %}
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+
+             <tr>
+            <td class="allif-fix-table-col">Items</td>
+            <td>{{form.items}}</td>
+        
+            </tr>
+             <tr>
+            <td class="allif-fix-table-col">Quantity</td>
+            <td>{{form.quantity}}</td>
+        
+            </tr>
+            
+      
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+       <tr>
+            <td class="allif-fix-table-col">Description</td>
+            <td>{{form.description}}</td>
+        
+            </tr>
+             <tr>
+            <td class="allif-fix-table-col">Date</td>
+            <td>{{form.date}}</td>
+        
+            </tr>
+            
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+         
+           <tr>
+            <td class="allif-fix-table-col">Comments</td>
+            <td>{{form.comments}}</td>
+        
+            </tr>
+          
+        <tr>
+          <td class="allif-fix-table-col">Action</td>
+          <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+      
+          </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
+</div><!--end....table row-->
+</div>
+</form>
+<!--end of table-->
+
+</div><!--end of main container of the page....-->
+
+<hr>
 
 
   
