--- a/allifmaalcommonapp/templates/allifmaalcommonapp/transport/shipment_pdf.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/transport/shipment_pdf.html
@@ -13,15 +13,15 @@
 <div class="allif-table-pdf-header">
 <table class="allif-pdf-table-header-section">
     <tr>
-      <th>Quote Details</th>
-      <th>Supplier Details</th>
+      <th>Shipment Details</th>
+      <th>Delivery Details</th>
       <th>Terms Details</th>
       
     </tr>
 
     <tr> 
     <td>
-    <li><span class="allif-pdf-table-content-headers">Quote.No.</span> {{allifquery.number}}</li>
+    <li><span class="allif-pdf-table-content-headers">Shipment.No.</span> {{allifquery.shipment_number}}</li>
     <li><span class="allif-pdf-table-content-headers">Department</span> {{allifquery.department}}</li>
     <li><span class="allif-pdf-table-content-headers">Date</span> {{allifquery.date|date:'d/m/Y'}}</li>
     </td>
@@ -34,8 +34,8 @@
 
     <td>
     <li><span class="allif-pdf-table-content-headers">Comments</span> {{allifquery.comments}}</li>
-    <li><span class="allif-pdf-table-content-headers">Terms</span> {{allifquery.payment_terms}}</li>
-    <li><span class="allif-pdf-table-content-headers">Delivery</span> {{allifquery.delivery}}</li>
+    <li><span class="allif-pdf-table-content-headers">Terms</span> {{allifquery.payment_mode}}</li>
+    <li><span class="allif-pdf-table-content-headers">Delivery</span> {{allifquery.delivery_notes}}</li>
 
     </td>
 
@@ -55,19 +55,19 @@
     <table class="allif-pdf-table-body">
 
     <tr>
-    <th colspan="5">Item Description</th>
+    <th colspan="4">Item Description</th>
     <th colspan="2">Quantity</th>
-    <th colspan="2">Unit Price</th>
-    <th colspan="3">Amount</th>
+    <th colspan="3">Origin</th>
+    <th colspan="3">Destination</th>
     </tr>
    
     <tbody>
     {% for item in allifqueryset %}
     <tr>
-    <td colspan="5">{{item.description}}</td>
+    <td colspan="4">{{item.items}}</td>
     <td colspan="2">{{item.quantity|floatformat:2|intcomma}}</td>
-    <td colspan="2"> {{item.description.unitPrice|floatformat:2|intcomma}}</td>
-    <td colspan="3">{{item.quote_selling_price|floatformat:2|intcomma}}</td>
+    <td colspan="3"> {{item.origin}}</td>
+    <td colspan="3">{{item.destination}}</td>
     
     </tr>
     {% endfor %}
@@ -81,30 +81,6 @@
     <table class="allif-pdf-table-body-summary">
     <tbody>
     
-    <tr>
-    <td colspan="5" id="allif-pdf-table-body-no-border"></td>
-    <td colspan="4"> Sub Total </td>
-    <td colspan="3">{{allifquery.total|floatformat:2|intcomma}} </td>
-    </tr>
-
-    <tr>
-    <td colspan="5" id="allif-pdf-table-body-no-border"></td>
-    <td colspan="4"> Discount Amount </td>
-    <td colspan="3"> {{allifquery.discountAmount|floatformat:2|intcomma}}</td>
-    </tr>
-
-     <tr>
-    <td colspan="5" id="allif-pdf-table-body-no-border"></td>
-    <td colspan="4"> Tax Amount {{allifquery.salestax.taxrate}}% </td>
-    <td colspan="3"> {{allifquery.taxAmount|floatformat:2|intcomma}}</td>
-    </tr>
-
-    <tr>
-    <td colspan="5" id="allif-pdf-table-body-no-border"></td>
-    <td colspan="4"> Grand Total Tax Inclusive {{allifquery.currency}}</td>
-    <td colspan="3">{{allifquery.grandtotal|floatformat:2|intcomma}} </td>
-    </tr>
-
     </tbody>
     </table>
     </div>
