--- a/allifmaalcommonapp/templates/allifmaalcommonapp/transport/transits.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/transport/transits.html
@@ -129,12 +129,11 @@
       <thead>
         <tr class="allif-table-header-row">
         <td class="allif-fix-table-col">Referrence No.</td>
-        <td>Customer</td>
-        <td>Value</td>
-        <td>Stage</td>
-        <td>Date</td>
-        <td>Owner</td>
-      
+        <td>Origin</td>
+        <td>Destination</td>
+        <td>Via</td>
+        <td>Status</td>
+       
         <td>Navigate</td>
         
         <td> . . . </td>
@@ -149,22 +148,19 @@
         <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonAddTransitDetails' item.id user_var glblslug %}">{{item.shipment_number}}</a></td>
        
             <td>
-            {{item.customer}}
+            {{item.origin}}
+          </td>
+          
+          <td>
+            {{item.destination}}
+          </td>
+         <td>
+            {{item.via}}
           </td>
           <td>
-            <a href="{% url 'allifmaalcommonapp:commonAddShipmentItems' item.id user_var glblslug %}" class="body-delete-link">{{item.total|floatformat:2|intcomma}}</a>
-          </td>
-          <td>
-            {{item.prospect}}
+            {{item.status}}
           </td>
         
-          <td>
-            {{item.date|date:'d/m/Y'}}
-          </td>
-          <td>
-            {{item.owner}}
-          </td>
-    
          <td>
           <div class="dropdown allifmaal-content-dropdown">
             <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
