--- a/allifmaalshaafiapp/templates/allifmaalshaafiapp/home/home.html
+++ b/allifmaalshaafiapp/templates/allifmaalshaafiapp/home/home.html
@@ -18,6 +18,8 @@
         <div class="container-fluid amel-content-header">
         
             <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+             <a href="">Triage</a>
+              <a href="">Doctor Assessments</a>
          
             <a href="{% url 'allifmaalshaafiapp:prescriptions' user_var glblslug %}">Prescriptions</a>
             <a href="{% url 'allifmaalshaafiapp:treatments' user_var glblslug %}">Treatments</a>
