added some functonalities

--- a/allifmaalilmapp/templates/allifmaalilmapp/home/home.html
+++ b/allifmaalilmapp/templates/allifmaalilmapp/home/home.html
@@ -17,11 +17,10 @@
         <div class="col-md-12"><!--start....header column-->
         <div class="container-fluid amel-content-header">
         
-            <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-            <a href="{% url 'allifmaalcommonapp:commonCompanyDetailsForClients' user_var glblslug %}">Company</a>
-            <a href="{% url 'allifmaalcommonapp:commonDivisions' user_var glblslug %}">Divisions</a>
-            <a href="{% url 'allifmaalcommonapp:commonBranches' user_var glblslug %}">Branches</a>
-            <a href="{% url 'allifmaalcommonapp:commonDepartments' user_var glblslug %}">Departments</a>
+          <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+          <a href="">Examinations</a>
+          <a href="">Exam Results</a>
+           
         </div>
           </div><!--end....header column-->
           </div><!--end....header row-->
