--- a/allifmaalcommonapp/templates/allifmaalcommonapp/transactions/transaction_details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/transactions/transaction_details.html
@@ -1,4 +1,8 @@
 {% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
+
+{% load allif_contextual_action_tags %} {# this helps to put the links where you want and it loads them #}
+
+{% load contextual_action_tags %}
 {% load humanize %}
 {% block title %}
 {{title}}
@@ -6,7 +10,20 @@
 {% block style %}
 {%endblock%}
 {% block body %}
+
+
+
+{# ...START.... this helps to get the contextual map #}
+  {% if allifquery %}
+  {% get_contextual_actions_map allifquery user_var glblslug as action_links %}
+  {# 'action_links' now holds the dictionary returned by the tag #}
+  {% else %}
+    <p></p>
+  {% endif %}
+{# ...END.... #}
+
 <div class="allifmaal-main-container">
+
 
 <!--start....main headere-->
 <div class="card-header">
@@ -29,13 +46,34 @@
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonProgress' allifquery.id user_var glblslug %}">Progress Records</a></li>
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonTransactionToPdf' allifquery.id user_var glblslug %}">Download</a></li>
       <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteTransaction' allifquery.id user_var glblslug %}">Delete Item</a></li>
-           
+        
+      
+
+
+{% if allifquery %} {# Only try to render if allifquery exists #}
+    {% render_contextual_actions allifquery user_var glblslug %}
+  
+{% else %}
+    <p>No transaction object provided to render specific actions.</p>
+{% endif %}
+
    </div>
   </ul>
 </div>
 <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
 
 <a href="{% url 'allifmaalcommonapp:commonTransactions' user_var glblslug %}">Transactions</a>
+
+<a href="{% url 'allifmaalshaafiapp:AddTriageData' allifquery.id user_var glblslug %}">Add Triage Details</a>
+
+    {# this is for the individual link rendering... add the link to wherever you want it to appear #}
+    {% if 'commonAddTransactionDetails' in action_links %} {# Example for a new action name #}
+      <a href="{{ action_links.commonAddTransactionDetails.url }}">Transaction Details</a>
+    {% endif %}
+
+
+
+
 
 
 </div>
@@ -45,10 +83,24 @@
   </div><!--end....header row-->
 
 </div><!--end....main headere-->
-
+{{cmpnysctr}}
   <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">{{allifquery}} Details</div>
+  <div class="table-details-content-description">{{allifquery}} Details | 
+    
+
+  {% if 'AddTriageData' in action_links %}
+    <a class="action-button" href="{{ action_links.AddTriageData.url }}">Add Triage Data</a>
+    {% endif %}
+
+
+  </div>
+
+
+  
+
+
+
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
     <div class="allif-info-tables">
@@ -170,8 +222,27 @@
       
           </tbody>
           </table>
+          
   </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div><!--end of row div --->
       
         </div>
@@ -313,8 +384,34 @@
           </tr>
           </tbody>
           </table>
+
+          
   </div>
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
     </div>
+  
     </div><!--end of row div --->
       
         </div>
