--- a/allifmaalcommonapp/templates/includes/allifapp_navigation_links.html
+++ b/allifmaalcommonapp/templates/includes/allifapp_navigation_links.html
@@ -1,9 +1,15 @@
-{# myerpapp/templates/includes/sector_navigation.html #}
 
 {# nav_links contains the combined list of general and sector-specific links #}
 {% for link in allif_custom_links %}
-    <a href="{{ link.url }}" style="margin-right: 15px; text-decoration: none; color: blue;">{{ link.name }}</a>
+    <a class="dropdown-item" href="{{ link.url }}">{{ link.name }}</a>
 {% endfor %}
+
+
+
+
+
+
+
 
 
 
