--- a/allifmaalshaafiapp/templates/allifmaalshaafiapp/triage/add_triage_data.html
+++ b/allifmaalshaafiapp/templates/allifmaalshaafiapp/triage/add_triage_data.html
@@ -16,10 +16,8 @@
 <div class="col-md-12"><!--start....header column-->
 
 <div class="container-fluid amel-content-header">
-
-  <a class="amel-table-list-identifier">Add New Prescriptions:</a>
-
-  <a href="{% url 'allifmaalshaafiapp:prescriptions' user_var glblslug %}">Prescriptions</a>
+<a href="{% url 'allifmaalshaafiapp:triageData' user_var glblslug %}">Triage Records</a>
+<a href="{% url 'allifmaalshaafiapp:prescriptions' user_var glblslug %}">Prescriptions</a>
 
 </div>
 
@@ -63,34 +61,49 @@
             <td>{{form.department}}</td>
         
             </tr>
+       <tr>
+        <td class="allif-fix-table-col">Systolic Pressure</td>
+        <td>{{form.blood_pressure_systolic}}</td>
+    
+        </tr>
         <tr>
-          <td class="allif-fix-table-col">Patient</td>
-          <td>{{form.medical_file}}</td>
-      
-          </tr>
-         <tr>
-            <td class="allif-fix-table-col">Medication</td>
-            <td>{{form.medication}}</td>
+            <td class="allif-fix-table-col">Diastolic Pressure</td>
+            <td>{{form.blood_pressure_diastolic}}</td>
         
             </tr>
              <tr>
-            <td class="allif-fix-table-col">Dosage From</td>
-            <td>{{form.dosage_form}}</td>
+            <td class="allif-fix-table-col">Temperature</td>
+            <td>{{form.temperature}}</td>
         
             </tr>
              <tr>
-            <td class="allif-fix-table-col">Dosage</td>
-            <td>{{form.dosage}}</td>
-        
-            </tr>
-       
-             <tr>
-            <td class="allif-fix-table-col">Via</td>
-            <td>{{form.via}}</td>
+            <td class="allif-fix-table-col">Weight</td>
+            <td>{{form.weight}}</td>
         
             </tr>
             
-           
+            <tr>
+            <td class="allif-fix-table-col">Height</td>
+            <td>{{form.height}}</td>
+        
+            </tr>
+          
+             <tr>
+            <td class="allif-fix-table-col">Complaints</td>
+            <td>{{form.complaints}}</td>
+        
+            </tr>
+             <tr>
+            <td class="allif-fix-table-col">Medical History</td>
+            <td>{{form.past_medical_history}}</td>
+        
+            </tr>
+             <tr>
+            <td class="allif-fix-table-col">Chronic Conditions</td>
+            <td>{{form.known_chronic_conditions}}</td>
+        
+            </tr>
+
         </tbody>
         </table>
       </div>
@@ -103,20 +116,43 @@
        <div class="allif-details-card table-responsive">
        <table class="table table-layout">
         <tbody>
+         <tr>
+            <td class="allif-fix-table-col">Oxygen Saturation</td>
+            <td>{{form.oxygen_saturation}}</td>
         
+            </tr>
+            <tr>
+            <td class="allif-fix-table-col">Resipration Rate</td>
+            <td>{{form.respiration_rate}}</td>
         
-           <tr>
-            <td class="allif-fix-table-col">Instructions</td>
-            <td>{{form.instructions}}</td>
+            </tr>
+             <tr>
+            <td class="allif-fix-table-col">Pulse Rate</td>
+            <td>{{form.pulse_rate}}</td>
+        
+            </tr>
+          
+             <tr>
+            <td class="allif-fix-table-col">Allergies</td>
+            <td>{{form.allergies}}</td>
+        
+            </tr>
+             <tr>
+            <td class="allif-fix-table-col">Current Medication</td>
+            <td>{{form.current_medication}}</td>
         
             </tr>
               <tr>
-            <td class="allif-fix-table-col">Quantity</td>
-            <td>{{form.quantity}}</td>
+            <td class="allif-fix-table-col">Comments</td>
+            <td>{{form.description}}</td>
         
             </tr>
-            
-           
+             <tr>
+            <td class="allif-fix-table-col">Triage Date</td>
+            <td>{{form.record_date}}</td>
+        
+            </tr>
+        
           </tbody>
           </table>
           </div>
@@ -129,44 +165,50 @@
        <!--start of the table here-->
        <table class="table table-layout">
         <tbody>
-           <tr>
-            <td class="allif-fix-table-col">Frequency</td>
-            <td>{{form.frequency}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Duration</td>
-            <td>{{form.duration}}</td>
-        
-            </tr>
-           
-           <tr>
-            <td class="allif-fix-table-col">Prescribed By</td>
-            <td>{{form.prescribed_by_doctor}}</td>
-         
-            </tr>
-               <tr>
-            <td class="allif-fix-table-col">Issued By</td>
-            <td>{{form.issued_by_pharmacist}}</td>
-        
-            </tr>
-       
-           <tr>
-            <td class="allif-fix-table-col">Status</td>
-            <td>{{form.is_issued}}</td>
-        
-            </tr>
-        <tr>
-            <td class="allif-fix-table-col">Issued On</td>
-            <td>{{form.issued_date_time}}</td>
-        
-            </tr>
-
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+          <tr>
+        <td class="allif-fix-table-col">Recorded By</td>
+        <td>{{form.staff}}</td>
+  
+      </tr>
+          <tr>
+          <td class="allif-fix-table-col">Pain Level</td>
+          <td>{{form.pain_level}}</td>
+        </tr>
           
-              </tr>
+          <tr>
+          <td class="allif-fix-table-col">Triage Level</td>
+          <td>{{form.triage_level}}</td>
+        </tr>
+          <tr>
+          <td class="allif-fix-table-col">Arrival Mode</td>
+          <td>{{form.mode_of_arrival}}</td>
+        </tr>
+          <tr>
+          <td class="allif-fix-table-col">Mobility</td>
+          <td>{{form.mobility_status}}</td>
+        </tr>
+          <tr>
+          <td class="allif-fix-table-col">Mental Status</td>
+          <td>{{form.mental_status}}</td>
+        </tr>
+          <tr>
+          <td class="allif-fix-table-col">Triage Disposition</td>
+          <td>{{form.triage_disposition}}</td>
+        </tr>
+          <tr>
+          <td class="allif-fix-table-col">Disposition Notes</td>
+          <td>{{form.disposition_notes}}</td>
+        </tr>
+        <tr>
+          <td class="allif-fix-table-col">Treatment Plan</td>
+          <td>{{form.treatment_plan}}</td>
+        </tr>
+         
+        <tr>
+          <td class="allif-fix-table-col">Action</td>
+          <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+      
+          </tr>
           </tbody>
           </table>
   </div>
@@ -188,7 +230,13 @@
 {% else %}
 
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add New Prescriptions</div>
+  <div class="table-details-content-description">
+    Add Triage Data
+    <a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonCustomerDetails' allifquery.customer.id user_var glblslug %}">{{allifquery.customer}}</a></td>
+    
+    <a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonAddTransactionDetails' allifquery.id user_var glblslug %}">  {{allifquery.trans_number}}</a>
+  
+  </div>
   <form method='POST' action=''>{% csrf_token %}
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -201,34 +249,21 @@
       <div class="table-responsive">
       <table class="table table-layout">
       <tbody>
+      <tr>
+        <td class="allif-fix-table-col">Systolic Pressure</td>
+        <td>{{form.blood_pressure_systolic}}</td>
+    
+        </tr>
         <tr>
-          <td class="allif-fix-table-col">Patient</td>
-          <td>{{form.medical_file}}</td>
-      
-          </tr>
-
-         <tr>
-            <td class="allif-fix-table-col">Triage Date</td>
-            <td>{{form.record_date}}</td>
+            <td class="allif-fix-table-col">Diastolic Pressure</td>
+            <td>{{form.blood_pressure_diastolic}}</td>
         
             </tr>
              <tr>
-            <td class="allif-fix-table-col">Description</td>
-            <td>{{form.description}}</td>
+            <td class="allif-fix-table-col">Temperature</td>
+            <td>{{form.temperature}}</td>
         
             </tr>
-             <tr>
-            <td class="allif-fix-table-col">Nurse</td>
-            <td>{{form.staff}}</td>
-        
-            </tr>
-       
-             <tr>
-            <td class="allif-fix-table-col">Complaints</td>
-            <td>{{form.complaints}}</td>
-        
-            </tr>
-            
              <tr>
             <td class="allif-fix-table-col">Weight</td>
             <td>{{form.weight}}</td>
@@ -240,11 +275,23 @@
             <td>{{form.height}}</td>
         
             </tr>
+          
              <tr>
-            <td class="allif-fix-table-col">Blood Systolic Pressure</td>
-            <td>{{form.blood_pressure_systolic}}</td>
+            <td class="allif-fix-table-col">Complaints</td>
+            <td>{{form.complaints}}</td>
         
             </tr>
+             <tr>
+            <td class="allif-fix-table-col">Medical History</td>
+            <td>{{form.past_medical_history}}</td>
+        
+            </tr>
+             <tr>
+            <td class="allif-fix-table-col">Chronic Conditions</td>
+            <td>{{form.known_chronic_conditions}}</td>
+        
+            </tr>
+
         </tbody>
         </table>
       </div>
@@ -257,12 +304,6 @@
        <div class="allif-details-card table-responsive">
        <table class="table table-layout">
         <tbody>
-        
-             <tr>
-            <td class="allif-fix-table-col">Blood Diastolic Pressure</td>
-            <td>{{form.blood_pressure_diastolic}}</td>
-        
-            </tr>
            <tr>
             <td class="allif-fix-table-col">Oxygen Saturation</td>
             <td>{{form.oxygen_saturation}}</td>
@@ -274,19 +315,14 @@
         
             </tr>
              <tr>
-            <td class="allif-fix-table-col">Past Medical History</td>
-            <td>{{form.past_medical_history}}</td>
+            <td class="allif-fix-table-col">Pulse Rate</td>
+            <td>{{form.pulse_rate}}</td>
         
             </tr>
+          
              <tr>
-            <td class="allif-fix-table-col">Chronic Conditions</td>
-            <td>{{form.known_chronic_conditions}}</td>
-        
-            </tr>
-
-             <tr>
-            <td class="allif-fix-table-col">Treatment Plan</td>
-            <td>{{form.treatment_plan}}</td>
+            <td class="allif-fix-table-col">Allergies</td>
+            <td>{{form.allergies}}</td>
         
             </tr>
              <tr>
@@ -294,6 +330,17 @@
             <td>{{form.current_medication}}</td>
         
             </tr>
+              <tr>
+            <td class="allif-fix-table-col">Comments</td>
+            <td>{{form.description}}</td>
+        
+            </tr>
+             <tr>
+            <td class="allif-fix-table-col">Triage Date</td>
+            <td>{{form.record_date}}</td>
+        
+            </tr>
+        
           </tbody>
           </table>
           </div>
@@ -306,29 +353,46 @@
        <!--start of the table here-->
        <table class="table table-layout">
         <tbody>
-         
-             <tr>
-            <td class="allif-fix-table-col">Prescribed By</td>
-            <td>{{form.prescribed_by_doctor}}</td>
-         
-            </tr>
-               <tr>
-            <td class="allif-fix-table-col">Issued By</td>
-            <td>{{form.issued_by_pharmacist}}</td>
-        
-            </tr>
        
-           <tr>
-            <td class="allif-fix-table-col">Pulse Rate</td>
-            <td>{{form.pulse_rate}}</td>
-        
-            </tr>
         <tr>
-            <td class="allif-fix-table-col">Temperature</td>
-            <td>{{form.temperature}}</td>
-        
-            </tr>
-
+        <td class="allif-fix-table-col">Recorded By</td>
+        <td>{{form.staff}}</td>
+  
+      </tr>
+          <tr>
+          <td class="allif-fix-table-col">Pain Level</td>
+          <td>{{form.pain_level}}</td>
+        </tr>
+          
+          <tr>
+          <td class="allif-fix-table-col">Triage Level</td>
+          <td>{{form.triage_level}}</td>
+        </tr>
+          <tr>
+          <td class="allif-fix-table-col">Arrival Mode</td>
+          <td>{{form.mode_of_arrival}}</td>
+        </tr>
+          <tr>
+          <td class="allif-fix-table-col">Mobility</td>
+          <td>{{form.mobility_status}}</td>
+        </tr>
+          <tr>
+          <td class="allif-fix-table-col">Mental Status</td>
+          <td>{{form.mental_status}}</td>
+        </tr>
+          <tr>
+          <td class="allif-fix-table-col">Triage Disposition</td>
+          <td>{{form.triage_disposition}}</td>
+        </tr>
+          <tr>
+          <td class="allif-fix-table-col">Disposition Notes</td>
+          <td>{{form.disposition_notes}}</td>
+        </tr>
+        <tr>
+          <td class="allif-fix-table-col">Treatment Plan</td>
+          <td>{{form.treatment_plan}}</td>
+        </tr>
+         
         <tr>
           <td class="allif-fix-table-col">Action</td>
           <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
